--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
@@ -18,10 +19,13 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "prettier": "^2.4.1",
+    "prettier-eslint": "^13.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
